Documentation edits made through Mintlify web editor

--- a/intro.mdx
+++ b/intro.mdx
@@ -34,15 +34,11 @@ As the game has moved on-chain, to put it simply, the faster and more precisely 
 In the upcoming cycle, a typical successful trader must go through an OODA loop before making a decision:
 
 1. **Observe**: Check the current situation—perhaps an emerging narrative that has been all over Twitter or a ticker that has been relentlessly shilled by a group of influencers. Check it on terminals (Dexscreener, TradingView, CMC), on-chain (Bubblemaps, Solscan, Birdeye), and social media (Discord, Twitter) simultaneously.
-
 2. **Orient**: Run a check to see if it fits your thesis and if there is anything suspicious about the ticker. (Have we seen these devs before? Are there any other whales or cabals behind this?)
-
 3. **Decide**: Should I buy this now, buy it later, ignore it, or short it?
-
 4. **Act**: How do I take these actions?
 
 In an ideal scenario, we want a single platform that can handle ALL of the above and process the OODA loop 24/7. Eventually, humans with their biological limits will be fundamentally outmatched. This is where our swarm comes into play.
-
 
 ### To take users to that promised land, a swarm of agents must be able to:
 
@@ -71,6 +67,7 @@ To be more specific, our platform consists of:
 The heart of ZoneIn is our optimization engine, a system that helps users optimize their portfolios by recommending actions based on our swarm analytics (which come from all of the other systems we mention below). Based on selective data and our intensive training, our engine aims to bring maximum efficiency with minimal effort from users.
 
 **Key Features:**
+
 - AI-powered recommendations based on your trading patterns
 - Real-time portfolio rebalancing suggestions
 - Risk-adjusted return optimization
@@ -81,6 +78,7 @@ The heart of ZoneIn is our optimization engine, a system that helps users optimi
 This is our foundation. Our agents connect the dots between wallets, labeling clusters based on their historical behavior, monitoring and analyzing their actions, and separating them into different groups/categories. The Trader Atlas will mark and rank on-chain traders into different brackets and use those brackets as a reference for other agents.
 
 **Capabilities:**
+
 - Wallet behavior profiling and categorization
 - Smart money identification and tracking
 - Cluster analysis and relationship mapping
@@ -91,6 +89,7 @@ This is our foundation. Our agents connect the dots between wallets, labeling cl
 Our agents analyze and synthesize data from multiple sources, from social media to market newsfeeds, delivering quality, actionable insight as soon as it starts to have an impact on your portfolio.
 
 **Data Sources:**
+
 - Twitter sentiment and trend analysis
 - Discord community engagement metrics
 - Reddit discussion sentiment
@@ -101,6 +100,7 @@ Our agents analyze and synthesize data from multiple sources, from social media 
 A comprehensive monitoring network that tracks critical on-chain events and movements in real-time, delivering instant notifications when significant market-moving activities occur.
 
 **Real-Time Monitoring:**
+
 - Large whale transactions and accumulation patterns
 - Token unlock events and vesting schedules
 - Exchange inflows/outflows and liquidity changes
@@ -108,12 +108,14 @@ A comprehensive monitoring network that tracks critical on-chain events and move
 - Bridge transfers and cross-chain movements
 
 **Intelligent Filtering:**
+
 - Customizable alert thresholds based on your portfolio
 - Risk-level categorization (Low, Medium, High, Critical)
 - Noise reduction to focus on truly impactful events
 - Historical context for better decision-making
 
 **Instant Delivery:**
+
 - Web dashboard notifications
 - Telegram bot alerts
 - Chrome extension popup notifications
@@ -124,12 +126,14 @@ A comprehensive monitoring network that tracks critical on-chain events and move
 Zonein's Deep Research revolutionizes crypto analysis with an advanced AI workflow that mimics human analysts but operates at superhuman scale. Using multi-step reasoning, self-reflection, and iterative improvement, our system delivers institutional-grade research that would take teams weeks to complete.
 
 **Advanced Research Workflow:**
+
 - **Multi-Step Search Process**: AI agents plan, gather, analyze, and refine research queries
 - **Self-Reflection & Gap Analysis**: System identifies missing information and fills research gaps
 - **Knowledge Synthesis**: Cross-references multiple sources and resolves conflicting information
 - **Real-Time Updates**: Reports stay current as market conditions change
 
 **Research Capabilities:**
+
 - Fundamental analysis of tokens and protocols
 - Technical analysis with AI-powered pattern recognition
 - Competitive landscape analysis
@@ -137,6 +141,7 @@ Zonein's Deep Research revolutionizes crypto analysis with an advanced AI workfl
 - Market trend analysis and narrative identification
 
 **Delivery Formats:**
+
 - Executive summaries for quick decision-making
 - Detailed research reports with full citations
 - Comparative analysis between projects
@@ -147,6 +152,7 @@ Zonein's Deep Research revolutionizes crypto analysis with an advanced AI workfl
 Our multi-platform approach ensures you can access ZoneIn's intelligence wherever you need it, with seamless synchronization across all interfaces.
 
 **Web Dashboard:**
+
 - Customizable widget-based interface
 - Drag-and-drop layout personalization
 - Real-time data streaming and updates
@@ -154,6 +160,7 @@ Our multi-platform approach ensures you can access ZoneIn's intelligence whereve
 - Portfolio management and optimization
 
 **Chrome Extension:**
+
 - Context-aware analysis on any crypto website
 - Highlight-to-ask functionality for instant insights
 - Session memory for conversational interactions
@@ -161,6 +168,7 @@ Our multi-platform approach ensures you can access ZoneIn's intelligence whereve
 - Cross-platform data synchronization
 
 **Telegram Bot:**
+
 - Conversational AI for natural language queries
 - Real-time alerts and notifications
 - Mobile-first crypto intelligence
@@ -168,6 +176,7 @@ Our multi-platform approach ensures you can access ZoneIn's intelligence whereve
 - Group chat integration for community analysis
 
 **API Access:**
+
 - RESTful API for custom integrations
 - WebSocket feeds for real-time data
 - Webhook support for automated workflows
@@ -178,24 +187,28 @@ Our multi-platform approach ensures you can access ZoneIn's intelligence whereve
 Our advanced copy-trading system that goes beyond simple mirror trading, using AI to analyze, optimize, and execute strategies based on successful wallet behaviors.
 
 **Intelligent Copy Trading:**
+
 - AI-powered trader selection based on performance metrics
 - Strategy analysis and risk assessment before copying
 - Position sizing optimization based on your risk tolerance
 - Automatic stop-loss and take-profit management
 
 **Advanced Features:**
+
 - **Strategy Decomposition**: Understanding why successful traders make specific moves
 - **Risk-Adjusted Copying**: Scaling positions based on your portfolio size and risk appetite
 - **Multi-Wallet Strategies**: Combining signals from multiple top performers
 - **Performance Attribution**: Understanding which copied trades contributed to your returns
 
 **Smart Execution:**
+
 - **Optimal Timing**: AI determines the best entry/exit points
 - **Slippage Protection**: Routes through optimal pools for best execution
 - **Partial Execution**: Scales into positions gradually to minimize market impact
 - **Circuit Breakers**: Automatic pause mechanisms for unusual market conditions
 
 **Transparency & Control:**
+
 - Full visibility into all copied trades and their rationale
 - Granular control over which strategies to follow
 - Real-time performance tracking and attribution
@@ -207,10 +220,10 @@ ZoneIn is the first on Solana (maybe also in the industry) to combine on-chain d
 
 ### Key Differentiators:
 
-- **Comprehensive Data Integration**: On-chain + off-chain + social signals
+- **Comprehensive Data Integration**: On-chain \+ off-chain \+ social signals
 - **Real-Time Processing**: Sub-second analysis and response generation
 - **Agentic AI**: Multiple specialized agents working in coordination
-- **Cross-Chain Intelligence**: Unified view across 50+ blockchains
+- **Cross-Chain Intelligence**: Unified view across 50\+ blockchains
 - **Behavioral Learning**: AI adapts to your trading patterns and preferences
 
 ### Our Methodology:
@@ -222,6 +235,7 @@ We already maintain a large set of labeled wallets, many linked with social iden
 ### Revenue & Growth Strategy:
 
 There are several ways for us to generate revenue:
+
 1. **First goal**: Acquire enough users to prove our methods work by helping traders
 2. **Second goal**: Front-run the next narratives of the upcoming cycle to become first movers
 3. **Ultimate goal**: Build a cash-cow on-chain business that transfers value to our token holders
@@ -252,4 +266,4 @@ Join the ZoneIn revolution and let our AI agent swarm work 24/7 to give you the 
 
 ---
 
-*The battle for crypto alpha is now a battle of cognitive speed. Don't get left behind.*
+_The battle for crypto alpha is now a battle of cognitive speed. Don't get left behind._
